--- a/index.html
+++ b/index.html
@@ -2,9 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lapaige Katleen</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+<main>
+    <section class="content">
+        <div class="main-text">
+            <h1 id="logo">Katleen Lapaige</h1>
+            <h3>Photolover</h3>
+            <div class="hide">
+                <span class="view-site">
+                    <a href="test.html">View website</a>
+                </span>
+            </div>
+
+        </div>
+    </section>
+</main>
+<div class="slider"></div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"
+        integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ=="
+        crossorigin="anonymous"></script>
+
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300&display=swap" rel="stylesheet">
+
+<script src="scripts/app.js"></script>
+
 
 </body>
 </html>
