--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Lapaige Katleen</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="images/logo.jpg">
 </head>
 <body>
 <main>
