Responsive design update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Lapaige Katleen</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style_index.css">
     <link rel="icon" href="images/logo.jpg">
 </head>
 <body>
@@ -14,7 +15,7 @@
             <h3>Photolover</h3>
             <div class="hide">
                 <span class="view-site">
-                    <a href="test.html">View website</a>
+                    <a href="#">View website</a>
                 </span>
             </div>
 
