building home.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lapaige Katleen</title>
+    <title>Katleen Lapaige</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style_index.css">
     <link rel="icon" href="images/logo.jpg">
@@ -12,7 +12,7 @@
     <section class="content">
         <div class="main-text">
             <h1 id="logo">Katleen Lapaige</h1>
-            <h3>Photolover</h3>
+            <h3>Photography</h3>
             <div class="hide">
                 <span class="view-site">
                     <a href="#">View website</a>
@@ -22,7 +22,10 @@
         </div>
     </section>
 </main>
-<div class="slider"></div>
+<div class="anim">
+    <div class="slider"></div>
+</div>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"
         integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ=="
