added minimalistic categorie

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 <header>
     <div class="title">
         <div class="title-text">
-            <a class="title-top">
+            <a class="title-top" href="index.html">
                 <h1 class="left">Katleen</h1>
                 <h1 class="right">Lapaige</h1>
             </a>
@@ -44,7 +44,7 @@
             <img src="images/cat-experimenteel.png">
             <p>Experimental</p>
         </a>
-        <a class="image-container fade" href="#">
+        <a class="image-container fade" href="cat-minim.html">
             <img src="images/cat-minimalisme.png">
             <p class="p-text">Minimalism</p>
         </a>
