--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h3>Photography</h3>
             <div class="hide">
                 <span class="view-site">
-                    <a href="#">View website</a>
+                    <a href="home.html">View website</a>
                 </span>
             </div>
 
