--- a/cat-minim.html
+++ b/cat-minim.html
@@ -72,8 +72,8 @@
 </section>
 
 <div class="modal">
-        <img src="images/minimalistic/full/minim-7.png" alt="modal-img" class="full-img">
-        <p class="caption">Lorem ipsum</p>
+        <img src="" alt="modal-img" class="full-img">
+        <p class="caption"></p>
 </div>
 
 <footer>
