--- a/cat-minim.html
+++ b/cat-minim.html
@@ -36,43 +36,43 @@
 <section class="gallery">
     <div class="image-container">
         <img src="images/minimalistic/preview/minim-1.png"
-        alt="Lorem ipsum"
+        alt=""
         data-original="minim-1.png">
     </div>
     <div class="image-container">
         <img src="images/minimalistic/preview/minim-2.png"
-             alt="Lorem ipsum"
+             alt=""
              data-original="minim-2.png">
     </div>
     <div class="image-container">
         <img src="images/minimalistic/preview/minim-3.png"
-             alt="Lorem ipsum"
+             alt=""
              data-original="minim-3.png">
     </div>
     <div class="image-container">
         <img src="images/minimalistic/preview/minim-4.png"
-             alt="Lorem ipsum"
+             alt=""
              data-original="minim-4.png">
     </div>
     <div class="image-container">
         <img src="images/minimalistic/preview/minim-5.png"
-             alt="Lorem ipsum"
+             alt=""
              data-original="minim-5.png">
     </div>
     <div class="image-container">
         <img src="images/minimalistic/preview/minim-6.png"
-             alt="Lorem ipsum"
+             alt=""
              data-original="minim-6.png">
     </div>
     <div class="image-container">
         <img src="images/minimalistic/preview/minim-7.png"
-             alt="Lorem ipsum"
+             alt=""
              data-original="minim-7.png">
     </div>
 </section>
 
 <div class="modal">
-        <img src="" alt="modal-img" class="full-img">
+        <img src="" alt="" class="full-img">
         <p class="caption"></p>
 </div>
 
