--- a/home.html
+++ b/home.html
@@ -36,22 +36,22 @@
 
 <section class="categories">
     <div class="container-black-white">
+        <a class="image-container fade" href="cat-minim.html">
+            <img src="images/categories/cat-minimalisme.png" alt="">
+            <p class="p-text">Minimalism</p>
+        </a>
         <a class="image-container fade">
-            <img src="images/cat-abstract.png">
+            <img src="images/categories/cat-abstract.png" alt="">
             <p>Abstract</p>
         </a>
         <a class="image-container fade">
-            <img src="images/cat-experimenteel.png">
+            <img src="images/categories/cat-experimenteel.png" alt="">
             <p>Experimental</p>
-        </a>
-        <a class="image-container fade" href="cat-minim.html">
-            <img src="images/cat-minimalisme.png">
-            <p class="p-text">Minimalism</p>
         </a>
     </div>
     <div class="container-color">
         <a class="image-container fade">
-            <img src="images/cat-camera-painting.png">
+            <img src="images/categories/cat-camera-painting.png" alt="">
             <p>Camera Painting</p>
         </a>
     </div>
